# genai-demo

./: .gitignore  README.md  env_example  package-lock.json  package.json
backend/: Dockerfile  docker-compose.yaml  env_example  pyproject.toml
backend/api/: server.py
backend/api/ai_assistant/: genai_router.py  models.py  schemas.py  services.py
backend/api/auth/: auth_router.py  schemas.py  services.py
backend/api/database/: db.py
backend/api/dependencies/: auth.py  db.py
backend/api/user/: add_admin.py  models.py  schemas.py  services.py  users_router.py
backend/api/utils/: custom_exceptions.py
frontend/: index.html
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/auth/: AuthProvider.tsx  Login.css  Login.tsx  auth-interface.ts
frontend/src/utils/: token-services.ts
